CYTOSCAPE-12978 Major refactoring to use Network Styles on tables.